# tf_read

./: 1.15.cmake  2.9.cmake  CMakeLists.txt  README.md  conanfile.txt  gen.sh  mv_test_out.sh
pb_out/tensorflow/stream_executor/: dnn.grpc.pb.cc  dnn.grpc.pb.h  dnn.pb.cc  dnn.pb.h
pb_out/tensorflow_serving/apis/: classification.grpc.pb.cc  classification.grpc.pb.h  get_model_metadata.grpc.pb.cc  get_model_metadata.grpc.pb.h  get_model_status.grpc.pb.cc  get_model_status.grpc.pb.h  get_model_status.pb.cc  get_model_status.pb.h  inference.grpc.pb.cc  inference.grpc.pb.h  input.grpc.pb.cc  input.grpc.pb.h  logging.grpc.pb.cc  logging.grpc.pb.h  logging.pb.cc  logging.pb.h  model.grpc.pb.cc  model.grpc.pb.h  model_management.grpc.pb.cc  model_management.grpc.pb.h  model_management.pb.cc  model_management.pb.h  model_service.grpc.pb.cc  model_service.grpc.pb.h  predict.grpc.pb.cc  predict.grpc.pb.h  prediction_log.grpc.pb.cc  prediction_log.grpc.pb.h  prediction_log.pb.cc  prediction_log.pb.h  prediction_service.grpc.pb.cc  regression.grpc.pb.cc  regression.grpc.pb.h  session_service.grpc.pb.cc  session_service.grpc.pb.h  session_service.pb.cc  session_service.pb.h  status.grpc.pb.cc  status.grpc.pb.h  status.pb.cc  (+1 more)
pb_out/tensorflow_serving/config/: file_system_storage_path_source.grpc.pb.cc  file_system_storage_path_source.grpc.pb.h  file_system_storage_path_source.pb.cc  file_system_storage_path_source.pb.h  log_collector_config.grpc.pb.cc  log_collector_config.grpc.pb.h  logging_config.grpc.pb.cc  logging_config.grpc.pb.h  (+10 more)
serving-1.15.0/: tensorflow
(+760 files in other folders)
